NewTargetSource()
AddSourceFolder(RECURSE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/public")
AddSourceFolder(RECURSE "${CMAKE_CURRENT_SOURCE_DIR}/private")
source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${SourceFiles})

function(add_lib TARGET_NAME)
	set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "utilpp")
	target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
	set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
	set_target_properties(${TARGET_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

	if(UTILPP_WITH_STATIC_LIBARCHIVE)
		target_link_libraries(${TARGET_NAME} PRIVATE LibArchive::LibArchive_static_new)
	else()
		target_link_libraries(${TARGET_NAME} PRIVATE LibArchive::LibArchive_new)
	endif()
	target_link_libraries(${TARGET_NAME} PRIVATE wildmatch::wildmatch_a)
	AddTargetInclude(${TARGET_NAME})
	add_library(${PROJECT_NAME}::${TARGET_NAME} ALIAS ${TARGET_NAME})

	if(NOT UTILPP_DISABLE_INSTALL)
		AddTargetInstall(${TARGET_NAME} ${PROJECT_NAME})
	endif()
endfunction()

set(TARGET_NAME simple_archive)
add_library(${TARGET_NAME} SHARED ${SourceFiles})
target_compile_definitions(${TARGET_NAME} PRIVATE -DSIMPLE_ARCHIVE_API_EXPORTS)
target_link_libraries(${TARGET_NAME} PUBLIC ${PROJECT_NAME}::simple_utilpp)
add_lib(${TARGET_NAME})

set(TARGET_NAME simple_archive_a)
add_library(${TARGET_NAME} STATIC ${SourceFiles})
target_compile_definitions(${TARGET_NAME} PUBLIC -DSIMPLE_ARCHIVE_API_NODLL)
target_link_libraries(${TARGET_NAME} PUBLIC ${PROJECT_NAME}::simple_utilpp_a)
add_lib(${TARGET_NAME})
