NewTargetSource()
AddSourceFolder(RECURSE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/public")
AddSourceFolder(RECURSE "${CMAKE_CURRENT_SOURCE_DIR}/private")

source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${SourceFiles})

function(add_lib TARGET_NAME)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "utilpp")
    target_compile_features(${TARGET_NAME} PRIVATE cxx_std_23)
    set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)

    target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::simple_utilpp_header)
    target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::steam_util)
    target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::steam_protobufs)
    target_link_libraries(${TARGET_NAME} PRIVATE OpenSSL::Crypto)
    target_link_libraries(${TARGET_NAME} PRIVATE ZLIB::ZLIB)
    target_link_libraries(${TARGET_NAME} PRIVATE concurrentqueue)

    AddTargetInclude(${TARGET_NAME})
    AddTargetInstall(${TARGET_NAME} UTILPP)
endfunction()

set(TARGET_NAME steam_msg)
add_library(${TARGET_NAME} SHARED ${SourceFiles})
target_compile_definitions(${TARGET_NAME} PRIVATE -DSTEAM_MSG_API_EXPORTS)
target_compile_definitions(${TARGET_NAME} PUBLIC -DENABLE_STEAM_MSG)
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_utilpp)
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_logger)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::net_util)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::websocket_util)
set_target_properties(${TARGET_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
add_lib(${TARGET_NAME})

set(TARGET_NAME steam_msg_a)
add_library(${TARGET_NAME} STATIC ${SourceFiles})
target_compile_definitions(${TARGET_NAME} PUBLIC -DSTEAM_MSG_API_NODLL)
target_compile_definitions(${TARGET_NAME} PUBLIC -DENABLE_STEAM_MSG)
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_utilpp_a)
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_logger_a)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::net_util_a)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::websocket_util_a)
add_lib(${TARGET_NAME})